# Smart_Grip

./: .gitignore  COMMANDS.md  README.md  app.json  babel.config.js  docker-compose.yml  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
Stitch_UI/camera_scan_ui/: code.html
Stitch_UI/connect_glove/: code.html
Stitch_UI/fabrication_status/: code.html
Stitch_UI/hand_selection/: code.html
Stitch_UI/home_dashboard/: code.html
Stitch_UI/kinetic_assistive_interface/: DESIGN.md
Stitch_UI/login_screen/: code.html
Stitch_UI/map_gesture_to_action/: code.html
Stitch_UI/record_gesture/: code.html
Stitch_UI/review_scans/: code.html
Stitch_UI/scan_introduction/: code.html
Stitch_UI/select_condition/: code.html
Stitch_UI/splash_screen/: code.html
app/: _layout.tsx  forgot-password.tsx  index.tsx  login.tsx  register.tsx  settings.tsx
app/(tabs)/: _layout.tsx  devices.tsx  gestures.tsx  home.tsx  profile.tsx  scans.tsx  sos.tsx
app/admin/: dashboard.tsx  index.tsx
app/device/: connect.tsx
app/devices/: index.tsx  map.tsx
app/emergency/: sos.tsx
app/gestures/: intro.tsx  record.tsx  saved.tsx
app/glove/: connect.tsx
app/home/: dashboard.tsx
app/onboarding/: condition.tsx  (+2 more)
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: db.rs  main.rs
backend/src/reconstruct/: camera.rs  marching_cubes.rs  mesh.rs  mod.rs  silhouette.rs  voxel.rs
components/: RouteGuard.tsx  ui.tsx
cv_service/: Dockerfile  main.py  requirements.txt
lib/: api.ts  mockData.ts  queryClient.ts  theme.ts
store/: useAppStore.ts
(+19 files in other folders)
